src/objects/Territory_Members__c.object
<CustomObject>
    <description>For demo purposes only</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Territory Members</relationshipLabel>
        <relationshipName>Territory_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Role__c</fullName>
        <label>Territory Role</label>
        <picklist>
            <picklistValues>
                <fullName>Territory Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Team Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Territory Member</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Territory Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Members</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>